xfce4-verve-plugin-ddg (1.0.1) unstable; urgency=low

  * Not a "real" changelog - see the github repository for history.

 -- Isaac Schemm <isaacschemm@gmail.com>  Wed, 22 Feb 2012 13:36:18 -0600
