@@ -55,7 +55,7 @@ static gboolean verve_is_directory (const gchar *str);
 
 static gboolean use_bang = TRUE;
 static gint search_engine = 0;
-GHashTable* engines;
+static char *engine_array[5] = {"", "https://duckduckgo.com/?q=", "https://www.google.com/search?q=", "http://www.bing.com/search?q=", "http://www.wolframalpha.com/input/?i="};
 
 void
 verve_set_bang_setting (gboolean bang)
@@ -84,13 +84,6 @@ verve_init (void)
 {
   /* Init history database */
   verve_history_init ();
-
-  /* Populate search engine hash map */
-  engines = g_hash_table_new(NULL, NULL);
-  g_hash_table_replace(engines, 1, "https://duckduckgo.com/?q=");
-  g_hash_table_replace(engines, 2, "https://www.google.com/search?q=");
-  g_hash_table_replace(engines, 3, "http://www.bing.com/search?q=");
-  g_hash_table_replace(engines, 4, "http://www.wolframalpha.com/input/?i=");
 }
 
 
@@ -197,7 +190,7 @@ verve_execute (const gchar *input,
       if (search_engine != 0)
       {
         /* Launch default search engine */
-        command = g_strconcat ("verve-search-launcher ", g_hash_table_lookup(engines, search_engine), input, NULL);
+        command = g_strconcat ("verve-search-launcher ", engine_array[search_engine], input, NULL);
       }
       else
       {
